# etherlink-governance

./: .gitignore  Makefile  README.md  pyproject.toml
contracts/: committee_governance.mligo  kernel_governance.mligo  proposers_governance.mligo  security_governance_committee.mligo  sequencer_governance.mligo
contracts/common/: constants.mligo  entrypoints.mligo  errors.mligo  events.mligo  rlp.mligo  rollup.mligo  storage.mligo  utils.mligo  validation.mligo  views.mligo  voting.mligo
contracts/common/utils/: byte_utils.mligo  converters.mligo  rlp.mligo  validation.mligo
contracts/governance/: errors.mligo  governance.mligo  phases.mligo  storage.mligo  utils.mligo  voting.mligo
contracts/test/: internal_test_proxy.mligo  rollup_mock.mligo
scripts/: deploy.py  environment.py  governance.py
tests/: base.py  gas_consumption.json  test_sample.py
tests/committee_governance/entrypoints/: test_new_proposal.py  test_trigger_committee_upgrade.py  test_upvote_proposal.py  test_vote.py
tests/common/: test_gas_consumption.py  test_promotion_period.py  test_proposal_period.py
tests/common/internal/: test_address_to_key_hash.py  test_payload_decoration.py
tests/governance/: test_new_phases.py  test_new_proposal.py  test_phases.py  test_promotion_period.py  test_promotion_phase.py  test_proposal_period.py  test_proposal_phase.py
tests/governance/entrypoints/: test_new_proposal.py
tests/helpers/: errors.py  metadata.py  operation_result_recorder.py  utility.py
tests/helpers/contracts/: __init__.py  committee_governance.py  governance.py  governance_base.py  (+6 more)
(+15 files in other folders)
